package com.swent.roamigo.resources

// Like R, but C
object C {
  object Tag {
    const val greeting_robo = "second_screen_greeting"

    const val main_screen_container = "main_screen_container"
    const val second_screen_container = "second_screen_container"

    const val permissions_title = "permissions_screen_title"
    const val permissions_row = "permissions_screen_row"
    const val permissions_continue = "permissions_screen_continue"

    const val profile_title = "profile_screen_title"
    const val profile_avatar = "profile_screen_avatar"
    const val profile_name = "profile_screen_name"
    const val profile_email = "profile_screen_email"
    const val profile_friends_row = "profile_screen_friends_row"
    const val profile_action = "profile_screen_action"
    const val profile_log_out = "profile_screen_log_out"
    const val profile_footer_tab = "profile_screen_footer_tab"
    const val trips_screen = "trips_screen"
    const val trips_main_trip_card = "trips_main_trip_card"
    const val trips_next_activity_card = "trips_next_activity_card"
    const val trips_invite_button = "trips_invite_button"
    const val trips_new_trip_button = "trips_new_trip_button"
    const val trips_navigation_trips = "trips_navigation_trips"
    const val trips_navigation_map = "trips_navigation_map"
    const val trips_navigation_photos = "trips_navigation_photos"
  }
}
